--- a/Portfolio.html
+++ b/Portfolio.html
@@ -121,7 +121,7 @@
           <ul class="cards-list">
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img1.5.jpg" alt="computer" />
+                <img class="cards-list__img cards-list__img--1" src="./Image/img1.5.jpg" alt="computer" />
               </div>
                 <h3 class="cards-list__title">Технокряк</h3>
                 <p class="cards-list__parag">Веб-сайт</p>
@@ -135,7 +135,7 @@
             <li class="cards-list__item">
               <div class="thumb">
                 <img
-                class="cards-list__img"
+                class="cards-list__img cards-list__img--2"
                 src="./Image/img2.5.jpg"
                 alt="basketboll"
                 />
@@ -151,7 +151,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img3.5.jpg" alt="seafood" />
+                <img class="cards-list__img cards-list__img--3" src="./Image/img3.5.jpg" alt="seafood" />
               </div>
                 <h3 class="cards-list__title">Ресторан Seafood</h3>
               <p class="cards-list__parag">Додаток</p>
@@ -164,7 +164,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img4.5.jpg" alt="prime" />
+                <img class="cards-list__img cards-list__img--4" src="./Image/img4.5.jpg" alt="prime" />
               </div>
               <h3 class="cards-list__title">Проєкт Prime</h3>
               <p class="cards-list__parag">Маркетинг</p>
@@ -177,7 +177,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img5.5.jpg" alt="box" />
+                <img class="cards-list__img cards-list__img--5" src="./Image/img5.5.jpg" alt="box" />
               </div>
               <h3 class="cards-list__title">Проєкт Boxes</h3>
               <p class="cards-list__parag">Додаток</p>
@@ -190,7 +190,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img6.5.jpg" alt="computer" />
+                <img class="cards-list__img cards-list__img--6" src="./Image/img6.5.jpg" alt="computer" />
               </div>
               <h3 class="cards-list__title">Inspiration has no Borders</h3>
               <p class="cards-list__parag">Веб-сайт</p>
@@ -203,7 +203,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img7.5.jpg" alt="book" />
+                <img class="cards-list__img cards-list__img--7" src="./Image/img7.5.jpg" alt="book" />
               </div>
               <h3 class="cards-list__title">Видання Limited Edition</h3>
               <p class="cards-list__parag">Дизайн</p>
@@ -216,7 +216,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img8.5.jpg" alt="lab" />
+                <img class="cards-list__img cards-list__img--8" src="./Image/img8.5.jpg" alt="lab" />
               </div>
               <h3 class="cards-list__title">Проєкт LAB</h3>
               <p class="cards-list__parag">Маркетинг</p>
@@ -229,7 +229,7 @@
             </li>
             <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards-list__img" src="./Image/img9.5.jpg" alt="computer" />
+                <img class="cards-list__img cards-list__img--9" src="./Image/img9.5.jpg" alt="computer" />
               </div>
               <h3 class="cards-list__title">Growing Business</h3>
               <p class="cards-list__parag">Додаток</p>
