--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <h2 class="electricity__title">Чим ми займаємося</h2>
           <ul class="electricity-list">
             <li class="electricity-list__item">
-              <div class="electricity-list__thumb">
+              <div class="electricity-list__thumb electricity-list__thumb--1">
                 <img
                   class="electricity-list__img"
                   src="./Image/img1.jpg"
@@ -248,7 +248,7 @@
               </div>
             </li>
             <li class="electricity-list__item">
-              <div class="electricity-list__thumb">
+              <div class="electricity-list__thumb electricity-list__thumb--2">
                 <img
                   class="electricity-list__img"
                   src="./Image/img2.jpg"
@@ -258,7 +258,7 @@
               </div>
             </li>
             <li class="electricity-list__item">
-              <div class="electricity-list__thumb">
+              <div class="electricity-list__thumb electricity-list__thumb--3">
                 <img
                   class="electricity-list__img"
                   src="./Image/img3.jpg"
@@ -277,7 +277,7 @@
           <ul class="people-list">
             <li class="people-list__item">
               <img
-                class="people-list__photo"
+                class="people-list__photo people-list__photo--1"
                 src="./Image/img1.1.jpg"
                 alt="ihor Demanienko"
               />
@@ -312,7 +312,7 @@
             </li>
             <li class="people-list__item">
               <img
-                class="people-list__photo"
+                class="people-list__photo people-list__photo--2"
                 src="./Image/img1.2.jpg"
                 alt="Olga Repina"
               />
@@ -347,7 +347,7 @@
             </li>
             <li class="people-list__item">
               <img
-                class="people-list__photo"
+                class="people-list__photo people-list__photo--3"
                 src="./Image/img1.3.jpg"
                 alt="Mikola Tarasov"
               />
@@ -382,7 +382,7 @@
             </li>
             <li class="people-list__item">
               <img
-                class="people-list__photo"
+                class="people-list__photo people-list__photo--4"
                 src="./Image/img1.4.jpg"
                 alt="Mikhailo Ermakov"
               />
